[api] Fix font awesome

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-  <h2>Login <i class="fa fa-list"></i></h2>
+  <h2>Login <i class="fa fa-github"></i></h2>
   <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
 
   <div id="react-login"></div>
