[login-page] Add initial frontend files

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,9 +1,7 @@
 // Main Style
 
-// Vendor
-// @import "vendor/spritesmith";
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 
-// General
 @import "variables";
 @import "helpers/all";
 @import "global";
