--- a/common/templates/common/index.html
+++ b/common/templates/common/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Github Monitor{% endblock %}
+
 {% block body %}
 <div id="react-app"></div>
 {% endblock body %}
