[master] Change default font color + texts changes

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -2,7 +2,7 @@
 body {
     background-color: $base-background-color;
     font-family: 'Montserrat', sans-serif;
-    color: #333;
+    color: $base-color;
 }
 
 .col-centered {
