--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,7 +3,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 
 @import "variables";
-@import "helpers/all";
+@import "vendors/all";
 @import "global";
-@import "components/all";
-@import "pages/all";
