[commit-page] Starting work on the commits page

--- a/assets/js/app/components/Box/styles.scss
+++ b/assets/js/app/components/Box/styles.scss
@@ -1,10 +1,10 @@
-.rounded {
-    border-radius: 6px;
-}
 
-.box-shadow {
-    border-top: 1px solid rgb(247, 247, 247);
-    border-right: 2px solid rgb(242, 242, 242);
-    border-bottom: 2px solid rgb(242, 242, 242);
-    border-left: 1px solid rgb(247, 247, 247);
+$bottom-right: 2px solid rgb(242, 242, 242);
+$top-left: 1px solid rgb(247, 247, 247);
+
+.box-border {
+    border-top: $top-left;
+    border-right: $bottom-right;
+    border-bottom: $bottom-right;
+    border-left: $top-left;
 }
