--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,7 +1,5 @@
 // Main Style
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
-
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Open+Sans:300,400');
 @import "variables";
-@import "vendors/all";
 @import "global";
