--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,3 +1,6 @@
 
-$base-background-color: #fafafa;
+$base-background-color: #f9f9f9;
 $base-color: #343a40;
+
+$link-color: #17a2b8;
+$link-hover-color: #116f7e;
