--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Login | Github Monitor{% endblock %}
+
 {% block body %}
   <div id="react-login"></div>
 {% endblock %}
