[master] Fix scss & Github OAouth keys

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -18,3 +18,8 @@ body {
 .pagination, small {
     font-family: 'Open Sans', sans-serif;
 }
+
+.col-centered {
+    float: none;
+    margin: 0 auto;
+}
